@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.4b
 ------------
 * Alchemy menu is sorted alphabetically
+* Added a weak health potion. Can be bought from Patchwork
 
 --------------------------------------------
              PREVIOUS VERSIONS
